Swagger: Review handler. Return structs
