# backend/docs/swagger.json
@@ -1484,7 +1484,7 @@
                     "200": {
                         "description": "Review statistics",
                         "schema": {
-                            "$ref": "#/definitions/backend_internal_domain_models.ReviewStats"
+                            "$ref": "#/definitions/internal_proj_reviews_handler.StatsResponse"
                         }
                     },
                     "500": {
@@ -1529,7 +1529,7 @@
                     "200": {
                         "description": "Entity review statistics",
                         "schema": {
-                            "$ref": "#/definitions/backend_internal_domain_models.ReviewStats"
+                            "$ref": "#/definitions/internal_proj_reviews_handler.StatsResponse"
                         }
                     },
                     "400": {
@@ -1617,7 +1617,7 @@
                     "200": {
                         "description": "Storefront rating summary",
                         "schema": {
-                            "$ref": "#/definitions/backend_internal_domain_models.StorefrontRatingSummary"
+                            "$ref": "#/definitions/internal_proj_reviews_handler.StorefrontRatingSummaryResponse"
                         }
                     },
                     "400": {
@@ -1705,7 +1705,7 @@
                     "200": {
                         "description": "User rating summary",
                         "schema": {
-                            "$ref": "#/definitions/backend_internal_domain_models.UserRatingSummary"
+                            "$ref": "#/definitions/internal_proj_reviews_handler.UserRatingSummaryResponse"
                         }
                     },
                     "400": {
@@ -3270,6 +3270,42 @@
                 "total": {
                     "type": "integer",
                     "example": 100
+                }
+            }
+        },
+        "internal_proj_reviews_handler.StatsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/backend_internal_domain_models.ReviewStats"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "internal_proj_reviews_handler.StorefrontRatingSummaryResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/backend_internal_domain_models.StorefrontRatingSummary"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "internal_proj_reviews_handler.UserRatingSummaryResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/backend_internal_domain_models.UserRatingSummary"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         },
